# 123_contact_api

./: pyproject.toml  requirements.txt
contacts_api/: serializers.py  urls.py  views.py
contacts_api/migrations/: 0001_initial.py
django_rest_api/: settings.py  urls.py
