[tool.poetry]
name = "django-rest-api"
version = "0.1.0"
description = ""
authors = ["Jason Serafica <seraficaj@gmail.com>"]
readme = "README.md"
packages = [{include = "django_rest_api"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.7"
django-rest-framework = "0.1.0"
asgiref = "3.6.0"
django-cors-headers = "3.14.0"
djangorestframework = "3.14.0"
psycopg2-binary = "2.9.5"
pytz = "2022.7.1"
sqlparse = "0.4.3"
dj-database-url = "^1.3.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
